--- a/modules/gadgeteer/drivers/Tweek/Makefile.in
+++ b/modules/gadgeteer/drivers/Tweek/Makefile.in
@@ -46,7 +46,7 @@ DRIVER_NAME=		TweekGadget
 includedir=		@includedir@/gadget/Devices/Tweek
 srcdir=			@srcdir@/../../gadget/Devices/Tweek
 top_srcdir=		@top_srcdir@
-EXTRA_INCLUDES+=	-I$(srcdir)
+EXTRA_INCLUDES+=	-I$(IDL_GENDIR)
 EXTRA_SRCS_PATH=	$(srcdir)/idl gadget
 INSTALL=		@INSTALL@
 INSTALL_FILES=
