Add $(IDL_GENDIR) to the include path.  $(srcdir) is not guaranteed to be the home of the C++ code generated from the IDL files.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13626 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/Tweek/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Tweek/Makefile.in
@@ -46,7 +46,7 @@ DRIVER_NAME=		TweekGadget
 includedir=		@includedir@/gadget/Devices/Tweek
 srcdir=			@srcdir@/../../gadget/Devices/Tweek
 top_srcdir=		@top_srcdir@
-EXTRA_INCLUDES+=	-I$(srcdir)
+EXTRA_INCLUDES+=	-I$(IDL_GENDIR)
 EXTRA_SRCS_PATH=	$(srcdir)/idl gadget
 INSTALL=		@INSTALL@
 INSTALL_FILES=
