Allow the Java build to be disabled using the $(NO_JAVA) variable that everything else uses.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13628 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/Tweek/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Tweek/Makefile.in
@@ -53,7 +53,9 @@ INSTALL_FILES=
 SUBOBJDIR=		$(DRIVER_NAME)
 
 HAVE_TWEEK_CXX=		@HAVE_TWEEK_CXX@
-HAVE_TWEEK_JAVA=	@HAVE_TWEEK_JAVA@
+ifndef NO_JAVA
+   HAVE_TWEEK_JAVA=	@HAVE_TWEEK_JAVA@
+endif
 
 ifeq ($(HAVE_TWEEK_CXX), Y)
    EXTRA_CXXFLAGS+=	@TWEEK_CXXFLAGS@
