--- a/modules/gadgeteer/drivers/Tweek/Makefile.in
+++ b/modules/gadgeteer/drivers/Tweek/Makefile.in
@@ -53,7 +53,9 @@ INSTALL_FILES=
 SUBOBJDIR=		$(DRIVER_NAME)
 
 HAVE_TWEEK_CXX=		@HAVE_TWEEK_CXX@
-HAVE_TWEEK_JAVA=	@HAVE_TWEEK_JAVA@
+ifndef NO_JAVA
+   HAVE_TWEEK_JAVA=	@HAVE_TWEEK_JAVA@
+endif
 
 ifeq ($(HAVE_TWEEK_CXX), Y)
    EXTRA_CXXFLAGS+=	@TWEEK_CXXFLAGS@
