--- a/modules/gadgeteer/drivers/configure.in
+++ b/modules/gadgeteer/drivers/configure.in
@@ -546,11 +546,11 @@ fi
 UNIX_DRIVER_ROOT_ABS="$DRIVER_ROOT_ABS"
 
 if test "x$OS_TYPE" = "xWin32" ; then
-   DSO_DRIVER_DEPS="$LDFLAGS $GADGET_LIBS_LD $GADGET_EXTRA_LIBS_LD comctl32.lib gdi32.lib user32.lib"
+   DSO_DRIVER_DEPS="$LDFLAGS $GADGET_LIBS_LD $GADGET_EXTRA_LIBS_LD"
    DSO_DRIVER_PROF_DEPS="$DSO_DRIVER_DEPS"
 else
    DSO_DRIVER_DEPS="$LDFLAGS $GADGET_LIBS_CC $GADGET_EXTRA_LIBS_CC "
-   DSO_DRIVER_PROF_DEPS="$LDFLAGS $GADGET_PROF_LIBS_CC $GADGET_EXTRA_LIBS_CC "
+   DSO_DRIVER_PROF_DEPS="$LDFLAGS $GADGET_PROF_LIBS_CC $GADGET_EXTRA_LIBS_CC"
 fi
 
 if test "x$OS_TYPE" = "xUNIX" ; then
