--- a/modules/vrjuggler/samples/Pf/advanced/pfNav/pfNav.vcproj
+++ b/modules/vrjuggler/samples/Pf/advanced/pfNav/pfNav.vcproj
@@ -34,13 +34,13 @@
 				WarningLevel="3"
 				DebugInformationFormat="1"
 				CompileAs="0"
-				ForcedIncludeFiles=""/>
+				ForcedIncludeFiles="vrj/vrjConfig.h"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="Juggler.lib Juggler_pf.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib libpf.lib libpfdu-util.lib libpfui.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="Juggler.lib Juggler_pf.lib sonix.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib libpf.lib libpfdu-util.lib libpfui.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib"
 				OutputFile="pfNav.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
@@ -165,6 +165,9 @@
 						Name="VCCLCompilerTool"
 						ForcedIncludeFiles="vrj/vrjConfig.h"/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\nav\velocityNav.cpp">
 			</File>
 		</Filter>
 		<Filter
