--- a/juggler/modules/gadgeteer/drivers/VARS.pl.in
+++ b/juggler/modules/gadgeteer/drivers/VARS.pl.in
@@ -42,57 +42,51 @@
 # Generated for use on @PLATFORM@
 # ------------------------------------------------------------------------------
 
-# Compiler information.
-$VARS{'APP_CC'}           = '@APP_CC@';
-$VARS{'APP_CXX'}          = '@APP_CXX@';
-$VARS{'APP_CFLAGS'}       = '@APP_CFLAGS@';
-$VARS{'APP_CXXFLAGS'}     = '@APP_CXXFLAGS@';
-$VARS{'APP_DEBUG_CFLAGS'} = '@APP_DEBUG_CFLAGS@';
-$VARS{'APP_OPTIM_CFLAGS'} = '@APP_OPTIM_CFLAGS@';
-$VARS{'APP_EXTRA_CFLAGS'} = '@APP_EXTRA_CFLAGS@';
-$VARS{'APP_DEFS'}         = '@DEFS@';
-$VARS{'APP_INCLUDES'}     = '@APP_INCLUDES@';
-$VARS{'DEP_GEN_FLAG'}     = '@DEP_GEN_FLAG@';
+$VARS{'CC'}              = '@CC@';
+$VARS{'C_DLL'}           = '@C_DLL@';
+$VARS{'C_PLUGIN'}        = '@C_PLUGIN@';
+$VARS{'CFLAGS'}          = '@CFLAGS@';
+$VARS{'CFLAGS_DYNLIB'}   = '@CFLAGS_DYNLIB@';
+$VARS{'CC_PROF_FLAGS'}   = '@CC_PROF_FLAGS@';
+$VARS{'CXX'}             = '@CXX@';
+$VARS{'CXX_DLL'}         = '@CXX_DLL@';
+$VARS{'CXX_PLUGIN'}      = '@CXX_PLUGIN@';
+$VARS{'CXXFLAGS'}        = '@CXXFLAGS@';
+$VARS{'CXXFLAGS_DYNLIB'} = '@CXXFLAGS_DYNLIB@';
+$VARS{'CXX_PROF_FLAGS'}  = '@CXX_PROF_FLAGS@';
+$VARS{'DEFS'}            = '@DEFS@';
+$VARS{'DEP_GEN_FLAG'}    = '@DEP_GEN_FLAG@';
+$VARS{'DEPEND_EXTRAS'}   = '@DEPEND_EXTRAS@';
+$VARS{'DEPEND_FLAGS'}    = '@DEPEND_FLAGS@';
+$VARS{'INCLUDES'}        = '@INCLUDES@';
+$VARS{'JDK_HOME'}        = '@JDK_HOME@';
 
-# Linker information.
-$VARS{'APP_LINK'}             = '@APP_LINK@';
-$VARS{'APP_LINK_FLAGS'}       = '@APP_LINK_FLAGS@';
-$VARS{'APP_LINKALL_ON'}       = '@APP_LINKALL_ON@';
-$VARS{'APP_LINKALL_OFF'}      = '@APP_LINKALL_OFF@';
-$VARS{'APP_DEBUG_LFLAGS'}     = '@APP_DEBUG_LFLAGS@';
-$VARS{'APP_OPTIM_LFLAGS'}     = '@APP_OPTIM_LFLAGS@';
-$VARS{'APP_EXTRA_LFLAGS'}     = '@APP_EXTRA_LFLAGS@';
-$VARS{'APP_BASIC_LIBS_BEGIN'} = '@APP_BASIC_LIBS_BEGIN_INST@';
-$VARS{'APP_BASIC_LIBS_END'}   = '@APP_BASIC_LIBS_END_INST@';
-$VARS{'APP_BASIC_LIBS'}       = '@APP_BASIC_LIBS@';
-$VARS{'APP_BASIC_EXT_LIBS'}   = '@APP_BASIC_EXT_LIBS@';
-$VARS{'APP_EXTRA_LIBS_BEGIN'} = '@APP_EXTRA_LIBS_BEGIN@';
-$VARS{'APP_EXTRA_LIBS_END'}   = '@APP_EXTRA_LIBS_END@';
-$VARS{'APP_EXTRA_LIBS'}       = '@APP_EXTRA_LIBS@';
-
-# Miscellaneous options.
-$VARS{'EXEEXT'}          = '@EXEEXT@';
+$VARS{'DYLIB_NAME_FLAG'} = '@DYLIB_NAME_FLAG@';
+$VARS{'DYNAMICLIB_EXT'}  = '@DYNAMICLIB_EXT@';
 $VARS{'OBJEXT'}          = '@OBJEXT@';
-$VARS{'EXE_NAME_FLAG'}   = '@EXE_NAME_FLAG@';
 $VARS{'OBJ_BUILD_FLAG'}  = '@OBJ_BUILD_FLAG@';
 $VARS{'OBJ_NAME_FLAG'}   = '@OBJ_NAME_FLAG@';
 $VARS{'PLATFORM'}        = '@PLATFORM@';
 $VARS{'LIBBITSUF'}       = '@LIBBITSUF@';
 
-# Gadgeteer stuff.
-$VARS{'GAD_SHARE_DIR'}        = '@GAD_SHARE_DIR@';
-$VARS{'APP_GAD_LIBS_X11'}     = '@APP_GAD_LIBS_X11@';
+$VARS{'DSOREGFILE'}      = '@DSOREGFILE@';
+$VARS{'DSOVERSION'}      = '@DSOVERSION@';
+$VARS{'DSOVERSIONOPTS'}  = '@DSOVERSIONOPTS@';
 
-$VARS{'DEPEND_EXTRAS'}        = '@DEPEND_EXTRAS@';
-$VARS{'DEPEND_FLAGS'}         = '@DEPEND_FLAGS@';
+$VARS{'LD'}              = '@LD@';
+$VARS{'LDFLAGS'}         = '@LDFLAGS@';
+$VARS{'EXTRA_LDFLAGS'}   = '@EXTRA_LDFLAGS@';
+$VARS{'LDOPTS'}          = '@LDOPTS@';
+$VARS{'LDOPTS_DBG'}      = '@LDOPTS_DBG@';
+$VARS{'LDOPTS_OPT'}      = '@LDOPTS_OPT@';
+$VARS{'LDOPTS_PROF'}     = '@LDOPTS_PROF@';
+$VARS{'LIBS'}            = '@LIBS@';
+$VARS{'OS_TYPE'}         = '@OS_TYPE@';
 
-$VARS{'LD'}                   = '@LD@';
-$VARS{'LDFLAGS'}              = '@LDFLAGS@';
-$VARS{'LIBS'}                 = '@LIBS@';
-$VARS{'OS_TYPE'}              = '@OS_TYPE@';
-$VARS{'MAKEDEPEND'}           = '@MAKEDEPEND@';
-$VARS{'USE_MAKEDEPEND'}       = '@USE_MAKEDEPEND@';
-
-$VARS{'APP_BASE_DIR'}         = '@APP_BASE_DIR_INST@';
+$VARS{'LN_S'}            = '@LN_S@';
+$VARS{'MAKEDEPEND'}      = '@MAKEDEPEND@';
+$VARS{'PERL'}            = '@PERL@';
+$VARS{'RANLIB'}          = '@RANLIB@';
+$VARS{'RM_LN'}           = '@RM_LN@';
 
 1;
