New feature:	Linux joystick driver support
This change adds a new driver for Linux joysticks using the the kernel joystick driver interface (joydev).  This allows for use
of gameport, serial, and usb joysticks under Linux.

Submitted by:	Allen Bierbaum
Obtained from:	under contract of John Deere


git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13657 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Makefile.in
@@ -143,6 +143,7 @@ SUBDIR=	5DT/DataGlove		 \
 	Intersense/IntersenseAPI \
 	Logitech/ThreeDMouse	 \
 	Open/DTK		 \
+        Open/LinuxJoydev         \
 	Open/Trackd		 \
 	Open/VRPN		 \
 	Polhemus/Fastrak	 \
