--- a/modules/gadgeteer/drivers/Ascension/Flock/Makefile.in
+++ b/modules/gadgeteer/drivers/Ascension/Flock/Makefile.in
@@ -44,7 +44,7 @@ include @topdir@/make.defs.mk
 
 DRIVER_NAME=	Flock
 
-srcdir=		@srcdir@/../../../gadget/Devices/Ascension/Flock
+srcdir=		@srcdir@
 top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 INSTALL_FILES=	
