We have not been installing any Gadgeteer sample code.  Now that the sample driver can actually be compiled and serves an important purpose in showing how to build driver plug-ins, we should be installing it.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13693 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/Makefile.in
+++ b/juggler/modules/gadgeteer/Makefile.in
@@ -86,6 +86,7 @@
 # install-opt-dso   - Install the dynamic shared object version of the
 #                     libraries.
 # install-headers   - Install only the header files.
+# install-samples   - Install only the sample code.
 # install-test      - Install only the test code.
 # install-data      - Install only the Data directory.
 #
