--- a/modules/gadgeteer/Makefile.in
+++ b/modules/gadgeteer/Makefile.in
@@ -86,6 +86,7 @@
 # install-opt-dso   - Install the dynamic shared object version of the
 #                     libraries.
 # install-headers   - Install only the header files.
+# install-samples   - Install only the sample code.
 # install-test      - Install only the test code.
 # install-data      - Install only the Data directory.
 #
