--- a/PyJuggler/src/Makefile.in
+++ b/PyJuggler/src/Makefile.in
@@ -107,6 +107,7 @@ PYMOD_EXT=		$(MOD_SUFFIX)@PYMOD_EXT@
 DYLIB_NAME_FLAG=	@DYLIB_NAME_FLAG@
 OBJEXT=			@OBJEXT@
 OBJ_NAME_FLAG=		@OBJ_NAME_FLAG@
+USE_GCC=		@USE_GCC@
 
 PYSTE_FILES=	vpr.pyste	\
 		jccl.pyste	\
@@ -218,6 +219,9 @@ install:
 
 $(OBJDIR)/%.$(OBJEXT): %.cpp
 	$(CXX) $(CXXFLAGS) $(OBJ_NAME_FLAG) -c $<
+ifeq ($(USE_GCC), yes)
+	objcopy -v --set-section-flags .debug_str=contents,debug $@ $@
+endif
 
 %$(PYMOD_EXT): %.$(OBJEXT)
 	$(CXX_PLUGIN) $(DYLIB_NAME_FLAG) $< $(LDFLAGS) $(LIBS) $(EXTRA_LIBS)
