Backport of the linux joystick driver.
git-svn-id: https://vrjuggler.googlecode.com/svn/branches/VRJ_2_0_ALPHA_2_BRANCH@13709 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/configure.in
+++ b/juggler/modules/gadgeteer/configure.in
@@ -790,6 +790,7 @@ AC_CONFIG_FILES([
    gadget/Devices/Logitech/ThreeDMouse/Makefile
    gadget/Devices/Open/Makefile
    gadget/Devices/Open/DTK/Makefile
+   gadget/Devices/Open/LinuxJoydev/Makefile
    gadget/Devices/Open/Trackd/Makefile
    gadget/Devices/Open/VRPN/Makefile
    gadget/Devices/Polhemus/Makefile
