Reduce over-zealous inlining.  This also ensures that vpr::SocketAcceptor and vpr::SocketConnector get compiled all the time.  Since no other code in Juggler uses them (other than the VPR test suite), it was all too easy to have updates for API changes get missed in these classes.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13726 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vapor/vpr/IO/Socket/Makefile.in
+++ b/juggler/modules/vapor/vpr/IO/Socket/Makefile.in
@@ -56,7 +56,9 @@ top_srcdir	= @top_srcdir@
 INSTALL		= @INSTALL@
 SUBOBJDIR	= $(VPR_LIBRARY)
 
-SRCS	 	= SocketDatagramOpt.cpp	\
+SRCS	 	= SocketAcceptor.cpp	\
+                  SocketConnector.cpp	\
+                  SocketDatagramOpt.cpp	\
                   SocketStreamOpt.cpp
 
 include $(MKPATH)/dpp.obj.mk
