Put the TweekGadget source in a more appropriate location.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13729 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/drivers/configure.in
+++ b/juggler/modules/gadgeteer/drivers/configure.in
@@ -634,12 +634,12 @@ AC_CONFIG_FILES([
    Open/DTK/Makefile
    Open/LinuxJoydev/Makefile
    Open/Trackd/Makefile
+   Open/Tweek/Makefile
+   Open/Tweek/Makefile.inc
+   Open/Tweek/build.xml
    Open/VRPN/Makefile
    Polhemus/Makefile
    Polhemus/Fastrak/Makefile
-   Tweek/Makefile
-   Tweek/Makefile.inc
-   Tweek/build.xml
    VRCO/Makefile
    VRCO/TrackdAPI/Makefile
    VirtualTechnologies/Makefile
