--- a/juggler/modules/gadgeteer/drivers/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Makefile.in
@@ -145,9 +145,9 @@ SUBDIR=	5DT/DataGlove		 \
 	Open/DTK		 \
         Open/LinuxJoydev         \
 	Open/Trackd		 \
+	Open/Tweek		 \
 	Open/VRPN		 \
 	Polhemus/Fastrak	 \
-	Tweek			 \
 	VRCO/TrackdAPI		 \
 	VirtualTechnologies/CyberGlove
 
