--- a/juggler/modules/gadgeteer/drivers/Open/Tweek/Makefile.in
+++ b/juggler/modules/gadgeteer/drivers/Open/Tweek/Makefile.in
@@ -43,7 +43,7 @@ include @topdir@/make.defs.mk
 
 DRIVER_NAME=		TweekGadget
 
-srcdir=			@srcdir@/../../gadget/Devices/Tweek
+srcdir=			@srcdir@
 top_srcdir=		@top_srcdir@
 EXTRA_INCLUDES+=	-I$(IDL_GENDIR)
 EXTRA_SRCS_PATH=	$(srcdir)/idl gadget
