--- a/juggler/modules/gadgeteer/drivers/Open/Tweek/build.xml.in
+++ b/juggler/modules/gadgeteer/drivers/Open/Tweek/build.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="tweek" default="dist" basedir=".">
-   <property name="srcdir" location="@srcdir@/../../gadget/Devices/Tweek" />
+   <property name="srcdir" location="@srcdir@" />
    <property name="topdir" location="@topdir@" />
    <property name="debug" value="on" />
    <property name="optimize" value="off" />
