Bug fixed:	Running 'make clean' did not clean up Java .class files.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13758 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/config/Makefile.in
+++ b/juggler/modules/jackal/config/Makefile.in
@@ -151,6 +151,8 @@ java:
 	@echo "------------------------------------------------"
 	$(ANT)
 
+BUILD_JAVA=	@BUILD_JAVA@
+
 _clean:
 ifeq ($(BUILD_JAVA), Y)
 	$(ANT) clean
