--- a/juggler/modules/jackal/editors/Makefile.in
+++ b/juggler/modules/jackal/editors/Makefile.in
@@ -93,6 +93,8 @@ java_afterbuild:
 	@echo "------------------------------------------------"
 	$(ANT)
 
+BUILD_JAVA=	@BUILD_JAVA@
+
 _clean:
 ifeq ($(BUILD_JAVA), Y)
 	$(ANT) clean
