--- a/modules/jackal/config/Makefile.in
+++ b/modules/jackal/config/Makefile.in
@@ -151,6 +151,8 @@ java:
 	@echo "------------------------------------------------"
 	$(ANT)
 
+BUILD_JAVA=	@BUILD_JAVA@
+
 _clean:
 ifeq ($(BUILD_JAVA), Y)
 	$(ANT) clean
