--- a/modules/jackal/rtrc/Makefile.in
+++ b/modules/jackal/rtrc/Makefile.in
@@ -155,6 +155,8 @@ java:
 	@echo "------------------------------------------------"
 	$(ANT)
 
+BUILD_JAVA=	@BUILD_JAVA@
+
 _clean:
 ifeq ($(BUILD_JAVA), Y)
 	$(ANT) clean
