Removed stray garbage character.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13762 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/gadgeteer/test/Makefile.in
+++ b/juggler/modules/gadgeteer/test/Makefile.in
@@ -78,7 +78,7 @@ LINK		= @APP_LINK@ $(LINK_FLAGS)
 LINKALL_ON	= @APP_LINKALL_ON@
 LINKALL_OFF	= @APP_LINKALL_OFF@
 
-VPATH	= @srcdir@:@srcdir@/../drivers/Ascension/Flock:@srcdir@/../drivers/Fakespace/PinchGlove
+VPATH	= @srcdir@:@srcdir@/../drivers/Ascension/Flock:@srcdir@/../drivers/Fakespace/PinchGlove
 
 aFlockTest_OBJS	= FlockStandalone.@OBJEXT@ aFlockTest.@OBJEXT@
 
