--- a/juggler/modules/gadgeteer/gadget/Type/EventWindow/Makefile.in
+++ b/juggler/modules/gadgeteer/gadget/Type/EventWindow/Makefile.in
@@ -47,7 +47,9 @@ top_srcdir=	@top_srcdir@
 INSTALL=	@INSTALL@
 SUBOBJDIR=	$(GADGET_LIBRARY)
 
-SRCS=		
+SRCS=		Event.cpp	\
+		KeyEvent.cpp	\
+		MouseEvent.cpp
 
 include $(MKPATH)/dpp.obj.mk
 
